# smoke-and-mirrors

./: README.md  pyproject.toml
dependencies/: dev-requirements.txt
dependencies/modbus/: requirements.txt
llm-generated-code/: modbus_handler.py
notebooks/: llm-code-generation.ipynb  llm-response-generation.ipynb
